--- a/css/view.less
+++ b/css/view.less
@@ -81,9 +81,12 @@
 }
 
 .variables {
+  .value-container, .value-edit {
+    margin-right: -4px;
+  }
+
   .value-container {
     position: relative;
-    margin-right: -5px;
     .read, .write {
       font-size: x-small;
       display: none;
@@ -103,9 +106,6 @@
   }
   .value-edit {
     display: none;
-    margin-right: -5px;
-    padding: 6px 1px;
-    width: 42px;
   }
   .var-icon {
     float: right;
